--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "click2fill",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This is a sample plugin for Siyuan (https://b3log.org/siyuan)",
-  "main": ".src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "eslint . --fix --cache",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "Vanessa",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.40.0",
