--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "click2fill",
   "version": "1.0.2",
-  "description": "This is a sample plugin for Siyuan (https://b3log.org/siyuan)",
+  "description": "通过选择文本并点击工具栏按钮，使用API响应自动填充文本",
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint . --fix --cache",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["text-fill", "api", "auto-complete", "文本填充", "API", "自动完成"],
+  "author": "Eatin",
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.40.0",
